--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "axios": "^0.18.0",
     "cloudinary-react": "^1.2.1",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.7.0",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "^2.1.3"
   },
   "scripts": {
